tests/snapshots/run_wpt_conformance__litert_greaterOrEqual_float16_two_5D_inputs_with_identical_shapes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater_or_equal.https.any.js",
    "greaterOrEqual float16 two 5D inputs with identical shapes",
    "litert",
    "PASS",
)
