tests/snapshots/run_wpt_conformance__litert_greaterOrEqual_float32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater_or_equal.https.any.js",
    "greaterOrEqual float32 4D tensors",
    "litert",
    "PASS",
)
